--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>demo4</artifactId>
+    <artifactId>externalAPI</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo4</name>
     <description>demo4</description>
@@ -29,6 +29,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+
 
         <dependency>
             <groupId>com.h2database</groupId>
